# celeste-domain-template

./: .gitignore  CLAUDE.md  README.md  example.py  pyproject.toml
src/celeste_domain_template/: __init__.py  mapping.py
src/celeste_domain_template/providers/: __init__.py  google_template.py
